objects/StudentData__c.object
<CustomObject>
    <fields>
        <fullName>Collegename__c</fullName>
        <label>Collegename</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DateE__c</fullName>
        <label>DateE</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Strength__c</fullName>
        <label>Strength</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>StudentData</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>StudentData Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>StudentData</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>